<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Beep">Beep</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">PosSdkDemo</string>
    <string name="back">BACK</string>
    <string name="blockTips">Please enter block No.~</string>
    <string name="bt_connect_text">Bluetooth connection with touch Icon</string>
    <string name="cancel">Cancel</string>
    <string name="clean">Clean</string>
    <string name="clik_start">Please put your card and click Start</string>
    <string name="emvTips">Please insert card for testing...</string>
    <string name="file_not_found">No upgrade firmware found</string>
    <string name="file_not_found_update_os">No upgrade os file found</string>
    <string name="finger">Finger</string>
    <string name="handwrite_tip">Please sign in the box</string>
    <string name="icc">ICC</string>
    <string name="idcard">IDCard</string>
    <string name="isMcuOn">Please Wait a moment,the MCU is turning on... \n Please do not perform any other operations</string>
    <string name="isOpening">Please Wait a moment,Opening...</string>
    <string name="isUpdating">Please Wait a moment,Updating... \n Please do not perform any other operations</string>
    <string name="key">Key</string>
    <string name="led">Led</string>
    <string name="mcr">MCR</string>
    <string name="mcrTitle">MCR open failed, please try again...</string>
    <string name="menu_exit">Exit</string>
    <string name="more">more</string>
    <string name="ok">OK</string>
    <string name="others">Others</string>
    <string name="pci">PCI</string>
    <string name="picc">NFC</string>
    <string name="print">Print</string>
    <string name="result">Result :</string>
    <string name="scan">Scan</string>
    <string name="scanContinuousMode">Continuous</string>
    <string name="scanDisable">Close</string>
    <string name="scanEnable">Open</string>
    <string name="scanNormalMode">Normal</string>
    <string name="scanStart">Start</string>
    <string name="scanStop">Stop</string>
    <string name="select">Select Type :</string>
    <string name="selectGray">Select Print density :</string>
    <string name="signature">Signature</string>
    <string name="spacebar">Spacebar</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="strContinue">Continue</string>
    <string name="swipe">Swipe Card Please</string>
    <string name="sys">Sys</string>
    <string name="test">Test</string>
    <string name="test_uart">Test_uart</string>
    <string name="title_activity_finger">Finger Test</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="title_activity_icc">Icc Test</string>
    <string name="title_activity_icc4428">Icc4428Activity</string>
    <string name="title_activity_icc4442">Icc4442Activity</string>
    <string name="title_activity_idcard">IDCard Test</string>
    <string name="title_activity_key">Key Test</string>
    <string name="title_activity_msr">Msr Test</string>
    <string name="title_activity_others">Others Test</string>
    <string name="title_activity_pci">Pci Test</string>
    <string name="title_activity_picc">Picc Test</string>
    <string name="title_activity_print">print Test</string>
    <string name="title_activity_scan">Scan Test</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_bluetooth">Bluetooth connect</string>
    <string name="title_home">China UnionPay</string>
    <string name="title_writing">Please sign in the box</string>
    <string name="update">Update</string>
    <string name="update_fail">Update Failed</string>
    <string name="update_finish">Update Finish \n Please restart the app</string>
    <string name="update_or_not">Upgrade?</string>
    <string name="upgradeTips">In order to update the system, it will not be interrupted accidentally, so the Back button event is blocked in this interface. Are you sure to continue ?</string>
    <string name="upgradeZip">Step 1: to rename the file that needs to be upgraded to upgrade.zip;\n\nStep 2: place upgrade.zip in the file system and directory;\n\nStep 3: click the button to upgrade;</string>
    <string name="upgrade_os">Upgrade OS</string>
    <string name="wait_time">Test NFC card...</string>
    <string name="writeTips">Please Enter the data you want to write~</string>
    <string name="aid_dlg_title">Please Select AID</string>
</resources>
