<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="38dp"
        android:layout_marginRight="20dp">
        <Button
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/btnEnableScan"
            android:background="@drawable/shape_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/scanEnable"
            android:layout_weight="1"/>
        <Button
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/btnDisableScan"
            android:background="@drawable/shape_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/scanDisable"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/myellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="Scan Result:"/>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:id="@+id/tvMsg"
        android:background="@drawable/shape_msg"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="..."/>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Set Scan Mode:"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btnNormal"
            android:background="@drawable/shape_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/scanNormalMode"
            android:layout_weight="2"/>
        <Button
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btnContinuous"
            android:background="@drawable/shape_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/scanContinuousMode"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">
        <Button
            android:textSize="35sp"
            android:textColor="@color/white"
            android:id="@+id/btnStartScan"
            android:background="@drawable/shape_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/scanStart"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
