<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/select"/>
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rg_card_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <RadioButton
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/radioButton_icc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@drawable/radio_button_style"
            android:text="Icc"
            android:layout_weight="1"/>
        <RadioButton
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/RadioButton_psam1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@drawable/radio_button_style"
            android:text="Psam1"
            android:layout_weight="1"/>
        <RadioButton
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/RadioButton_psam2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@drawable/radio_button_style"
            android:text="Psam2"
            android:layout_weight="1"/>
    </RadioGroup>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/result"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:id="@+id/tv_msg"
        android:background="@drawable/shape_msg"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/button_SingleTest"
            android:background="@drawable/shape_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/start"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
